tests/rosetta/out/Rust/csv-to-html-translation-2.rs
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
fn main() {
    let c = format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", "Character,Speech
", "The multitude,The messiah! Show us the messiah!
"), "Brians mother,<angry>Now you listen here! He's not the messiah; he's a very naughty boy! Now go away!</angry>
"), "The multitude,Who are you?
"), "Brians mother,I'm his mother; that's who!
"), "The multitude,Behold his mother! Behold his mother!");
    let mut rows: Vec<Vec<&'static str>> = vec![];
    for line in split(c, "
") {
        rows = { let mut tmp = rows.clone(); tmp.push(split(line, ",")); tmp };
    }
    let headings = true;
    println!("<table>");
    if headings {
        if rows.len() as i32 > 0 {
            let mut th = String::new();
            for h in rows[0] {
                th = format!("{}{}", format!("{}{}", format!("{}{}", th, "<th>"), h), "</th>");
            }
            println!("   <thead>");
            println!("{}", vec![format!("{}", format!("{}{}", format!("{}{}", "      <tr>", th), "</tr>"))].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
            println!("   </thead>");
            println!("   <tbody>");
            let mut i = 1;
            while i < rows.len() as i32 {
                let mut cells = String::new();
                for cell in rows[i as usize] {
                    cells = format!("{}{}", format!("{}{}", format!("{}{}", cells, "<td>"), cell), "</td>");
                }
                println!("{}", vec![format!("{}", format!("{}{}", format!("{}{}", "      <tr>", cells), "</tr>"))].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
                i += 1;
            }
            println!("   </tbody>");
        }
    } else {
        for row in rows {
            let mut cells = String::new();
            for cell in row {
                cells = format!("{}{}", format!("{}{}", format!("{}{}", cells, "<td>"), cell), "</td>");
            }
            println!("{}", vec![format!("{}", format!("{}{}", format!("{}{}", "    <tr>", cells), "</tr>"))].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
        }
    }
    println!("</table>");
}
